# github-teams-project-bid-uwultimate-stardust-crusaders

./: Pipfile  README.md
Alexa/: CSCD350 Presentation format (1).pptx  CSCD350 Presentation format.pptx  NewestUwUltimateStardustCrusaders-UserStories.docx  Team10-UwUltimateStardustCrusaders-ProjectProposal.docx  UserStories  UwUltimateStardustCrusaders-UserStories.docx  sequencediagram.drawio  ~$am10-UwUltimateStardustCrusaders-ProjectProposal.docx
Dennis/: Requirements and Specifications.md  requirements.md  swim_lanes_v2.drawio
Eric/: .$UI_rough_draft.drawio.bkp  .$UI_rough_draft.drawio.dtmp  .$swim_lanes_v3.drawio.bkp  .placeholder  .~lock.Team10-UwUltimateStardustCrusaders-ProjectProposal.docx#  CSCD350 Presentation format.pptx  Team10-UwUltimateStardustCrusaders-ProjectProposal.docx  UI_rough_draft.drawio  (+4 more)
src/: FTP.py  Machine.py  Network_Topology.py  Pipfile  __init__.py  ip_scanner.py  machine.py  main.py  network_topology.py  networkgui.py  pen_tester.py  port_scanner.py  port_window.py  pyproject.toml  pyqt_gui.py  requirements.txt  scan_window.py  scanmasterx.ui  temp_scanner.py  test.py  welcomepage.py
src/scanmaster_x.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vulnerability_lookup/: __init__.py  cpe.py  cve.py  cve_enums.py  nvd.py
src/vulnerability_lookup/cvss/: __init__.py  _base.py  cvss_v2.py  cvss_v3.py  cvss_v31.py
src/vulnerability_lookup/limitters/: __init__.py  _base.py  abc_limitter.py  no_limit.py  throttle.py
src/vulnerability_lookup/test/: __init__.py  ft_cpe.py  ft_cpe_api.py  ft_cve.py  ft_nvd.py
(+13 files in other folders)
